@@ -80,6 +80,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/WF_AP_Tags.rpt">AP tagged references for curation</A> <B> (mnk)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/WF_AP_IndexingNeeded.rpt">AP:Indexing_needed papers with genes</A> <B> (csmith)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_NomenCheck.rpt">Alleles with Potentially Improper Nomenclature in Symbols and Synonyms and Names</A> <B> (anna)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NonMouseNotInEG.rpt">Non-Mouse Expressed Component/Driver Component whose Marker does not exist in EntrezGene</A> <B>(smb)</B>
 </OL>
 
 <A NAME="variants"><B>Allele Variants (laurens)</B> </A>
